tests/scope/bad/input_subscope_bad_name1.catala_en
## Test

```catala
declaration scope Foo:
    input x content integer
    context y content integer
    output a content integer

declaration scope Bar:
    input foo scope Foo
    input z content integer
    output b content integer

declaration scope Baz:
    output c content integer

scope Foo:
    definition y equals 1
    definition a equals x + y

scope Bar:
    definition b equals foo.a + z

scope Baz:
    definition c equals (output of Bar with {
        -- z: 1
        -- foo : 1
    }).b
```

```catala-test-inline
$ catala typecheck
┌─[ERROR]─
│
│  Scope call input arguments should be scope or sub-scope variables, but foo
│  is the entire sub-scope.
│
├─➤ tests/scope/bad/input_subscope_bad_name1.catala_en:27.12-27.15:
│    │
│ 27 │         -- foo : 1
│    │            ‾‾‾
├─ Test
│
│ Sub-scope Foo declared here
├─➤ tests/scope/bad/input_subscope_bad_name1.catala_en:4.19-4.22:
│   │
│ 4 │ declaration scope Foo:
│   │                   ‾‾‾
└─ Test
#return code 123#
```
